i18n/zh-TW/docusaurus-plugin-content-docs/current/references/sdk/ethers-ext/v5/account-management/sign-message/role-based-recover-msg.mdx
# 基於角色的賬戶密鑰

**AccountKeyRoleBased** 表示基於角色的密鑰。 如果賬戶有一個**基於賬戶密鑰角色的**對象，且交易類型為**除賬戶更新外的**，那麼驗證過程將根據每個角色進行，如下所示：

<CH.Spotlight>
<CH.Code>

```js SignMsgWithRoleBased.js
const { ethers } = require("ethers");

const { Wallet } = require("@kaiachain/ethers-ext/v5");

const senderAddr = "0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea";
const senderPriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
const senderRoleTransactionPriv = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";
const senderRoleAccountUpdatePriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
const senderRoleFeePayerPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
const txWallet = new Wallet(senderAddr, senderPriv, provider);

async function main() {
  const msg = "hello";
  const msghex = ethers.utils.hexlify(ethers.utils.toUtf8Bytes(msg));
  const sig = await txWallet.signMessage(msg);
  console.log({ senderAddr, msg, msghex, sig });

  const addr1 = ethers.utils.verifyMessage(msg, sig);
  console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === senderAddr.toLowerCase());

  const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
  console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === senderAddr.toLowerCase());
}

main().catch(console.error);
```

---

```zsh output
❯ js SignMsgWithRoleBased.js
{
  senderAddr: '0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea',
  msg: 'hello',
  msghex: '0x68656c6c6f',
  sig: '0x736460622fcfab0fa7de0ca1cde05178f01b124294a640b5f5820c7271262c6c271f1ad15f0d7b974d68eaac60d5daa1e7dd65301bbfb814beecbca1238b64121c'
}
recoveredAddr lib 0x5bD2fb3c21564C023A4A735935a2B7A238C4cCEA true
recoveredAddr rpc 0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea true
```

</CH.Code>

---

導入 **ethers** 和 **@kaiachain/ethers-ext** 軟件包，在 ethers.js 上添加 kaia 功能

```js SignMsgWithRoleBased.js focus=1:3

```

---

定義發件人的**地址**、**私人密鑰**和其他**基於角色的**私人密鑰

```js SignMsgWithRoleBased.js focus=5:9

```

---

使用指定的 **kairos** 測試網 URL 設置提供程序。 以太坊中的提供者是訪問區塊鏈數據的只讀抽象。

```js SignMsgWithRoleBased.js focus=11

```

---

此外，您還可以將提供商 URL 從 **kairos** 更改為 **quicknode**

```js SignMsgWithRoleBased.js focus=11
const { ethers } = require("ethers");

const { Wallet } = require("@kaiachain/ethers-ext/v5");

const senderAddr = "0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea";
const senderPriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
const senderRoleTransactionPriv = "0xc9668ccd35fc20587aa37a48838b48ccc13cf14dd74c8999dd6a480212d5f7ac";
const senderRoleAccountUpdatePriv = "0x9ba8cb8f60044058a9e6f815c5c42d3a216f47044c61a1750b6d29ddc7f34bda";
const senderRoleFeePayerPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
const txWallet = new Wallet(senderAddr, senderPriv, provider);

async function main() {
  const msg = "hello";
  const msghex = ethers.utils.hexlify(ethers.utils.toUtf8Bytes(msg));
  const sig = await txWallet.signMessage(msg);
  console.log({ senderAddr, msg, msghex, sig });

  const addr1 = ethers.utils.verifyMessage(msg, sig);
  console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === senderAddr.toLowerCase());

  const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
  console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === senderAddr.toLowerCase());
}

main().catch(console.error);
```

---

用**私鑰**和**提供者**創建發件人錢包

```js SignMsgWithRoleBased.js focus=12

```

---

定義要簽名和恢復的信息

```js SignMsgWithRoleBased.js focus=15

```

---

用發件人的**錢包**簽署信息

<CH.Code>
```js SignMsgWithRoleBased.js focus=16:18

````
---

```zsh output
❯ js SignMsgWithRoleBased.js
{
  senderAddr: '0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea',
  msg: 'hello',
  msghex: '0x68656c6c6f',
  sig: '0x736460622fcfab0fa7de0ca1cde05178f01b124294a640b5f5820c7271262c6c271f1ad15f0d7b974d68eaac60d5daa1e7dd65301bbfb814beecbca1238b64121c'
}
````

</CH.Code>

---

使用`ethers.utils.verifyMessage`從已簽名的信息中恢復地址

<CH.Code>
```js SignMsgWithRoleBased.js focus=20:21

````
---
```zsh output
❯ js SignMsgWithRoleBasedExample.js
recoveredAddr lib 0x5bD2fb3c21564C023A4A735935a2B7A238C4cCEA true
````

</CH.Code>

---

使用 `klay_recoverFromMessage` 從已簽名的信息中恢復地址

<CH.Code>
```js SignMsgWithRoleBased.js focus=23:24

````
---
```zsh output
❯ js SignMsgWithRoleBasedExample.js
recoveredAddr rpc 0x5bd2fb3c21564c023a4a735935a2b7a238c4ccea true
````

</CH.Code>
</CH.Spotlight>
